<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/restaurant_1"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <!--  First Name Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            style="@style/SignUpTextInputLayoutStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstName"
                style="@style/SignUpTextBoxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--  Last Name Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/SignUpTextInputLayoutStyle"
            app:layout_constraintEnd_toEndOf="@+id/firstNameLayout"
            app:layout_constraintStart_toStartOf="@+id/firstNameLayout"
            app:layout_constraintTop_toBottomOf="@+id/firstNameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastName"
                style="@style/SignUpTextBoxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--  Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailAddressLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/SignUpTextInputLayoutStyle"
            app:layout_constraintEnd_toEndOf="@+id/lastNameLayout"
            app:layout_constraintStart_toStartOf="@+id/lastNameLayout"
            app:layout_constraintTop_toBottomOf="@+id/lastNameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailAddress"
                style="@style/SignUpTextBoxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <!--  Phone Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/SignUpTextInputLayoutStyle"
            app:layout_constraintEnd_toEndOf="@+id/emailAddressLayout"
            app:layout_constraintStart_toStartOf="@+id/emailAddressLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailAddressLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumber"
                style="@style/SignUpTextBoxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            style="@style/MaterialButtonStyle"
            android:padding="12dp"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberLayout" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".15" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_loading"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:constraint_referenced_ids="progressBar_loading, textView_loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/loading"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar_loading"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>